--- a/src/styles/common/01.less
+++ b/src/styles/common/01.less
@@ -1,13 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 
-.frame {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 400px;
-  height: 400px;
-  margin-top: -200px;
-  margin-left: -200px;
+.container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
   border-radius: 2px;
 	box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
 	overflow: hidden;
@@ -16,12 +12,13 @@
 	font-family: 'Open Sans', Helvetica, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background: #3FAF82;
+	
 }
 
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+.task {
+  width: 300px;
+  height: 300px;
+  margin: 10px;
+
+  border: 1px solid black;
 }
