--- a/src/styles/02/styles.less
+++ b/src/styles/02/styles.less
@@ -4,18 +4,22 @@
     align-items    : center;
     justify-content: center;
     flex-direction : column;
+
+    border: 10px solid red;
 }
 
-.elem-02 {
+.elem {
     width           : 70px;
     height          : 7px;
     background-color: #FFF;
     margin-bottom   : 8px;
     border-radius   : 5px;
-    position        : relative;
     box-shadow      : 0 2px 10px 0 rgba(0, 0, 0, 0.3);
+    position        : relative;
 
     &__top {
+        top: 15px;
+
         &--active {
             animation: top 0.3s ease-in-out forwards, top-active 0.3s linear forwards 0.3s;
         }
