created big circle

--- a/src/styles/common/02-styles.less
+++ b/src/styles/common/02-styles.less
@@ -1,24 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 
 .container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  border-radius: 2px;
-	box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
-	overflow: hidden;
-  background: #fff;
-  color: #333;
-	font-family: 'Open Sans', Helvetica, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	
+  display                : flex;
+  justify-content        : space-around;
+  flex-wrap              : wrap;
+  border-radius          : 2px;
+  box-shadow             : 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
+  overflow               : hidden;
+  background             : #fff;
+  color                  : #333;
+  font-family            : 'Open Sans', Helvetica, sans-serif;
+  -webkit-font-smoothing : antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
 }
 
 .task {
-  width: 300px;
-  height: 300px;
-  margin: 10px;
+  width          : 300px;
+  height         : 300px;
+  margin         : 10px;
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+  flex-direction : column;
 
   border: 1px solid black;
 }
