--- a/src/styles/03/styles.less
+++ b/src/styles/03/styles.less
@@ -16,18 +16,24 @@
 
 .pyramid {
     position: relative;
+    opacity : 1;
+
+    animation: fillSky 4s cubic-bezier(.4, 0, .49, 1) infinite;
 
     &__sun {
-        position        : absolute;
-        z-index         : 2;
-        top             : 7px;
-        left            : 73px;
-        width           : 34px;
-        height          : 34px;
-        border-radius   : 50%;
-        background      : #FFEF00;
+        position: absolute;
+        top     : 7px;
+        left    : 73px;
+
+        width        : 34px;
+        height       : 34px;
+        border-radius: 50%;
+
+        background: #FFEF00;
+
         transform-origin: 50% 400%;
         animation       : sunUpDown 4s cubic-bezier(.4, 0, .49, 1) infinite;
+        z-index         : 2;
     }
 
     &__sky {
@@ -35,6 +41,8 @@
         height: 124px;
 
         background-color: #7DDFFC;
+
+
     }
 
     &__sand {
@@ -62,5 +70,23 @@
     100% {
         background: #F57209;
         transform : rotate(70deg);
+    }
+}
+
+@keyframes fillSky {
+    0% {
+        opacity: 1;
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    // 70% {
+    //     opacity: .3;
+    //}
+
+    100% {
+        opacity: 0;
     }
 }
