--- a/src/styles/03/styles.less
+++ b/src/styles/03/styles.less
@@ -5,20 +5,15 @@
 }
 
 .task__03 {
-    width : 180px;
-    height: 180px;
-
-    border-radius  : 50%;
-    //border       : 1px solid white;
-
-    overflow: hidden;
+    width        : 180px;
+    height       : 180px;
+    border-radius: 50%;
+    overflow     : hidden;
 }
 
 .pyramid {
     position: relative;
     opacity : 1;
-
-
 
     &__sun {
         position: absolute;
@@ -75,6 +70,43 @@
         height          : 56px;
         background-color: #F0DE75;
         animation       : fillSand 4s cubic-bezier(.4, 0, .49, 1) infinite;
+    }
+
+    &__shade {
+        position: absolute;
+        top     : 124px;
+        left    : -60px;
+
+        width : 400px;
+        height: 30px;
+
+        background-color: rgba(0, 0, 0, 0.2);
+        clip-path       : polygon(95px 0%, 211px 0%, 80% 100%);
+        animation       : pyramidShade 4s cubic-bezier(.4, 0, .49, 1) infinite;
+        transform-origin: 0 50%;
+    }
+}
+
+@keyframes pyramidShade {
+    0% {
+        transform-origin: 0 0;
+        transform       : scaleY(0);
+        clip-path       : polygon(95px 0%, 211px 0%, 100% 100%);
+    }
+
+    55% {
+        transform       : scaleY(.6);
+        transform-origin: 0 0;
+    }
+
+    75% {
+        transform: scaleY(1);
+    }
+
+    100% {
+        transform-origin: 0 0;
+        transform       : scaleY(0);
+        clip-path       : polygon(95px 0%, 211px 0%, 0% 100%);
     }
 }
 
