--- a/src/styles/03/styles.less
+++ b/src/styles/03/styles.less
@@ -94,7 +94,7 @@
         clip-path       : polygon(95px 0%, 211px 0%, 100% 100%);
     }
 
-    55% {
+    30% {
         transform       : scaleY(.6);
         transform-origin: 0 0;
     }
@@ -183,4 +183,8 @@
     100% {
         background: #272C34;
     }
+}
+
+.paused>* {
+    animation-play-state: paused;
 }
