--- a/src/styles/common/02-styles.less
+++ b/src/styles/common/02-styles.less
@@ -16,6 +16,7 @@
 }
 
 .task {
+  position       : relative;
   width          : 300px;
   height         : 300px;
   margin         : 10px;
@@ -25,4 +26,16 @@
   flex-direction : column;
 
   border: 1px solid black;
+}
+
+.btn {
+  position: absolute;
+  bottom  : 5px;
+  right   : 5px;
+
+  width        : 50px;
+  height       : 20px;
+  border-radius: 10px;
+  box-shadow   : none;
+  border       : none;
 }
